# gna

./: CMakeLists.txt  LICENSE  README.md  newfile
doc/gna-api-doxygen/: Doxyfile  build_publish.bat
samples/: CMakeLists.txt  readme.txt
samples/src/sample01/: CMakeLists.txt  sample01.cpp
src/common/: Address.h  GnaDrvApi.h  GnaException.h  Macros.h  common.h  gna-api-status.h  gna-api-types-gmm.h  gna-api-types-xnn.h  gna-api.h  gna-h-wrapper.h  gna.h  gna_drm.h  profiler.cpp  profiler.h  resource.h  version.rc
src/gna-api/: gna2-api.h  gna2-capability-api.h  gna2-common-api.h  gna2-device-api.h  gna2-inference-api.h  gna2-instrumentation-api.h  gna2-memory-api.h  gna2-model-api.h  gna2-model-export-api.h  gna2-model-suecreek-header.h
src/gna-lib/: AccelerationDetector.cpp  AccelerationDetector.h  ActivationFunction.cpp  ActivationFunction.h  ActivationHelper.cpp  ActivationHelper.h  ActiveList.cpp  ActiveList.h  AffineFunctions.cpp  AffineFunctions.h  AffineLayerCapabilities.cpp  AffineLayerCapabilities.h  AffineLayers.cpp  AffineLayers.h  ApiWrapper.h  AuxiliaryCapabilities.cpp  AuxiliaryCapabilities.h  Bias.cpp  Bias.h  BufferConfigValidator.cpp  BufferConfigValidator.h  BufferMap.cpp  BufferMap.h  CMakeLists.txt  Capabilities.cpp  Capabilities.h  CompiledModel.cpp  CompiledModel.h  Component.cpp  Component.h  ConvolutionalFunctions.cpp  ConvolutionalFunctions.h  ConvolutionalFunctions2D.cpp  ConvolutionalFunctions2D.h  ConvolutionalLayer.cpp  ConvolutionalLayer.h  ConvolutionalLayer2D.cpp  ConvolutionalLayer2D.h  ConvolutionalLayer2DCapabilities.cpp  ConvolutionalLayer2DCapabilities.h  (+130 more)
src/gna-lib/gna-api/: gna2-capability-impl.cpp  gna2-capability-impl.h  gna2-common-impl.cpp  gna2-common-impl.h  gna2-device-impl.cpp  gna2-device-impl.h  gna2-impl.h  gna2-inference-impl.cpp  gna2-inference-impl.h  gna2-instrumentation-impl.cpp  gna2-instrumentation-impl.h  gna2-memory-impl.cpp  gna2-memory-impl.h  gna2-model-export-impl.cpp  gna2-model-export-impl.h  gna2-model-impl.cpp  gna2-model-impl.h
src/gna-lib/kernels/: CMakeLists.txt  ConvolutionKernelArguments.h  KernelArguments.cpp  KernelArguments.h  KernelMacros.h  PoolingKernelArguments.cpp  PoolingKernelArguments.h  XnnKernel.cpp  XnnKernel.h  affine_avx2-sat.cpp  affine_sse4-sat.cpp  common.hpp  common_avx1.hpp  common_avx2.hpp  common_sse4.hpp  convnet.cpp  convnet.h  convnet_avx1-sat.cpp  convnet_avx1.cpp  convnet_avx2-sat.cpp  convnet_avx2.cpp  convnet_generic-sat.cpp  convnet_generic.cpp  convnet_sse4-sat.cpp  convnet_sse4.cpp  gmm.cpp  gmm.h  igemm16_avx1-sat.cpp  igemm16_avx1.cpp  igemm16_avx2-sat.cpp  igemm16_avx2.cpp  igemm16_generic-sat.cpp  igemm16_generic.cpp  igemm16_sse4-sat.cpp  igemm16_sse4.cpp  igemm16_subset_avx1-sat.cpp  igemm16_subset_avx1.cpp  igemm16_subset_avx2-sat.cpp  igemm16_subset_avx2.cpp  igemm16_subset_generic-sat.cpp  (+54 more)
