# @copyright (C) 2018-2021 Intel Corporation
# SPDX-License-Identifier: LGPL-2.1-or-later

cmake_minimum_required(VERSION 3.10)

set(PROJECT_NAME gna-samples)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_C_STANDARD 11)
set(CXX_STANDARD_REQUIRED ON)

project(${PROJECT_NAME})

add_library(gna
    SHARED IMPORTED GLOBAL
)

set(BINARY_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin)
file(MAKE_DIRECTORY ${BINARY_DIR})

set(GNA_LIB_PATH ${CMAKE_SOURCE_DIR}/../gna-lib)
set(GNA_LIB_PATH_LNX_RELEASE ${GNA_LIB_PATH}/LNX-RELEASE/x64)
set(GNA_LIB_PATH_LNX_DEBUG ${GNA_LIB_PATH}/LNX-DEBUG/x64)
set(GNA_LIB_PATH_WIN_RELEASE ${GNA_LIB_PATH}/WIN-RELEASE/x64)
set(GNA_LIB_PATH_WIN_DEBUG ${GNA_LIB_PATH}/WIN-DEBUG/x64)

if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" OR ${CMAKE_SYSTEM_NAME} STREQUAL "Android")
    set_property(TARGET gna PROPERTY IMPORTED_LOCATION ${GNA_LIB_PATH_LNX_RELEASE}/libgna.so)
    set_property(TARGET gna PROPERTY IMPORTED_LOCATION_DEBUG ${GNA_LIB_PATH_LNX_DEBUG}/libgnad.so)
elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
    set_property(TARGET gna PROPERTY IMPORTED_LOCATION ${GNA_LIB_PATH_WIN_RELEASE}/gna.dll)
    set_property(TARGET gna PROPERTY IMPORTED_LOCATION_DEBUG ${GNA_LIB_PATH_WIN_DEBUG}/gna.dll)
    set_property(TARGET gna PROPERTY IMPORTED_IMPLIB ${GNA_LIB_PATH_WIN_RELEASE}/gna.lib)
    set_property(TARGET gna PROPERTY IMPORTED_IMPLIB_DEBUG ${GNA_LIB_PATH_WIN_DEBUG}/gna.lib)
endif()

add_subdirectory(src/sample01)
